--- a/app/users/templates/users/hi.html
+++ b/app/users/templates/users/hi.html
@@ -13,10 +13,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('greetings', name='John') }}">Greet John</a>
+                    <a class="nav-link" href="{{ url_for('users.greetings', name='John') }}">Greet John</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('admin') }}">Admin</a>
+                    <a class="nav-link" href="{{ url_for('users.admin') }}">Admin</a>
                 </li>
             </ul>
         </div>
